--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<h1>Hello!114514!</h1>
+<title>欢迎您的访问</title>
+<p>欢迎您访问JRH的GitHub页</p>
+<p>您现在看到的是该GitHub页的引导主页</p>
+<p>衷心感谢您的访问</p>
+<button onclick="别看我只是一个按钮()">别看我只是一个按钮</button>
