--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <title>欢迎您的访问</title>
-<p>欢迎您访问JRH的GitHub页</p>
+<h1>欢迎您访问JRH的GitHub页</h1>
 <p>您现在看到的是该GitHub页的引导主页</p>
 <p>衷心感谢您的访问</p>
 <button onclick="别看我只是一个按钮()">别看我只是一个按钮</button>
+<h3>以下是本(小)站的各页：</h3>
+<ul> 
+    <li>
+        <a href="http://Jiangdl2333.github.io/clock.html">跳转至 TimeDisplay</a>
+    </li>
+    <li>
+        <a href="http://www.bilibili.com">跳转至 小破站-干杯~</a>
+    </li>
+    <li>
+        <a href="https://www.aliyundrive.com/s/cWX21i6QuYy">跳转至 神奇的地方awa</a>
+<ul>
+<p>
+  <del>没了快滚<del>尽请期待awa
+<p>
