--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
         <a href="https://www.aliyundrive.com/s/cWX21i6QuYy">跳转至 神奇的地方awa</a>
 <ul>
 <p>
-  <del>没了快滚<del>尽请期待awa
+  <del>没了快滚</del>尽请期待awa
 <p>
