--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <p>您现在看到的是该GitHub页的引导主页</p>
 <p>衷心感谢您的访问</p>
 <button onclick="别看我只是一个按钮()">别看我只是一个按钮</button>
-<h3>以下是本(小)站的各页：</h3>
+<h3>以下是本(小)站的各页或常用网站~：</h3>
 <ul> 
     <li>
         <a href="http://Jiangdl2333.github.io/clock.html">跳转至 TimeDisplay</a>
