--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <li>
         <a href="https://jiangdl2333.github.io/%E4%B8%80%E4%BA%BF%E5%83%8F%E7%B4%A0%E4%B8%AD%E5%9B%BD%E5%9C%B0%E5%9B%BE.jpg">跳转至 中国地图（一亿像素可下载）</a>
     </li>
+    <li>
+        <a href="https://jiangdl2333.github.io/gobang.html">跳转至 菜鸟低配五子棋</a>
+    </li>
 <ul>
 <p>
   <del>没了快滚</del>  尽请期待awa
