--- a/index.html
+++ b/index.html
@@ -1,26 +1,47 @@
-<title>欢迎您的访问</title>
-<h1>恭喜你找到JRH的GitHubPage嘿嘿</h1>
+<title>哇塞靓仔欢迎</title>
+<style type="text/css">
+.awa {
+	color: #CF9;
+}
+.awawa {
+	font-family: "Comic Sans MS", cursive;
+}
+.zx {
+	color: #C00;
+}
+.thank {
+	font-family: "Comic Sans MS", cursive;
+	color: #939;
+}
+</style>
+<h1 class="awa"><em><strong>欢迎您访问JRH·GitHubPage~~~~~</strong></em></h1>
+<p>您现在看到的是该GitHub页的引导主页</p>
+<p class="zx">衷心感谢您的访问</p>
 <button onclick="别看我只是一个按钮()">别看我只是一个按钮</button>
+<h3>以下是本(小)站的各页或常用网站~：</h3>
+<span class="awawa">
 <ul> 
+awawawawawawa</span>
+<li>
+    <a href="http://Jiangdl2333.github.io/clock.html">跳转至 TimeDisplay</a>
+  </li>
     <li>
-        <a href="https://res.wx.qq.com/voice/getvoice?mediaid=MzI3NjYzODY0Nl8yMjQ3NDg3MTE2">跳转至 神奇的地方awa</a>
+        <a href="http://www.bilibili.com">跳转至 小破站-干杯~</a>
     </li>
     <li>
-        <a href="http://Jiangdl2333.github.io/clock.html">跳转至 TimeDisplay</a>
+        <a href="https://www.aliyundrive.com/s/cWX21i6QuYy">跳转至 神奇的地方awa</a>
     </li>
     <li>
-        <a href="https://jiangdl2333.github.io/%E6%89%AB%E9%9B%B7.html">跳转至 扫雷-扫雷玩不玩？</a>
+        <a href="https://jiangdl2333.github.io/%E6%89%AB%E9%9B%B7.html">跳转至 扫雷</a>
     </li>
     <li>
         <a href="https://jiangdl2333.github.io/%E4%B8%80%E4%BA%BF%E5%83%8F%E7%B4%A0%E4%B8%AD%E5%9B%BD%E5%9C%B0%E5%9B%BE.jpg">跳转至 中国地图</a>
     </li>
     <li>
-        <a href="https://jiangdl2333.github.io/gobang.html">跳转至 菜鸟低配五子棋</a>
+        <a href="https://jiangdl2333.github.io/gobang.html">跳转至 五子棋</a>
     </li>
     <li>
         <a href="https://m.xiaoyuanhao.com/micro/app/micrositeV4/schoolList?orgid=330402-S000060&appCode=1&corpid=wx52dc8f87984bbc10">跳转至 实初公众号</a>
     </li>
 <ul>
-<p>
-  <del>没了快滚</del>  尽请期待awa
-<p>
+<span class="thank">Thanks to:Yzl Gys Dhy Qjq Cxm </span>
