--- a/clock.html
+++ b/clock.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <h1 id="made">Made By JRH</h1>
-  <h2>Current Time: 0000-00-00 00:00:00</h2>
+  <h2 id="currentTime">Current Time: 0000-00-00 00:00:00</h2>
   <h2 id="timer">Timer: 00:00:00</h2>
   <button onclick="startTimer()">Start Timer</button>
   <button onclick="stopTimer()">Stop Timer</button>
