--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	color: #939;
 }
 </style>
-<h1 class="awa"><em><strong>欢迎您访问JRH·GitHubPage~~~~~</strong></em></h1>
+<h1 class="awa"><em><strong>JRH·GitHubPage~~~~~</strong></em></h1>
 <p>您现在看到的是该GitHub页的引导主页</p>
 <p class="zx">衷心感谢您的访问</p>
 <button onclick="别看我只是一个按钮()">别看我只是一个按钮</button>
