--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 </style>
 <h1 class="awa"><em><strong>JRH·GitHubPage~~~~~</strong></em></h1>
 <p>您现在看到的是该GitHub页的引导主页</p>
-<p class="zx">衷心感谢您的访问</p>
 <button onclick="别看我只是一个按钮()">别看我只是一个按钮</button>
-<h3>以下是本(小)站的各页或常用网站~：</h3>
 <span class="awawa">
 <ul> 
 awawawawawawa</span>
@@ -42,6 +40,9 @@ awawawawawawa</span>
     </li>
     <li>
         <a href="https://m.xiaoyuanhao.com/micro/app/micrositeV4/schoolList?orgid=330402-S000060&appCode=1&corpid=wx52dc8f87984bbc10">跳转至 实初公众号</a>
+    </li>
+    <li>
+        <a href="https://jiangdl2333.github.io/subjectmc">跳转至 MC专题</a>
     </li>
 <ul>
 <span class="thank">Thanks to:Yzl Gys Dhy Qjq Cxm </span>
