--- a/SubjectMC.html
+++ b/SubjectMC.html
@@ -1,6 +1,6 @@
 <title>mc专题</title>
 <h3>专题网站</h3>
-<h1>20250622v1新服： frp-mix.com:12483 </h1>
+<h1>20250622v1-sever1.15.2新服： frp-mix.com:12483 </h1>
 <ul> 
   <li>
     <a href="https://afdian.com/p/0164034c016c11ebafcb52540025c377">跳转至 pcl下载页</a>
