--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ awawawawawawa</span>
         <a href="https://m.xiaoyuanhao.com/micro/app/micrositeV4/schoolList?orgid=330402-S000060&appCode=1&corpid=wx52dc8f87984bbc10">跳转至 实初公众号</a>
     </li>
     <li>
-        <a href="https://jiangdl2333.github.io/subjectmc">跳转至 MC专题</a>
+        <a href="https://jiangdl2333.github.io/SubjectMC.html">跳转至 MC专题</a>
     </li>
 <ul>
 <span class="thank">Thanks to:Yzl Gys Dhy Qjq Cxm </span>
