--- a/SubjectMC.html
+++ b/SubjectMC.html
@@ -1,8 +1,15 @@
 <title>mc专题</title>
 <h3>专题网站</h3>
-<h1>20250622v1-sever1.15.2新服： frp-mix.com:12483 </h1>
+<span>20250622v1-sever1.15.2新服： frp-mix.com:12483 </span>
 <ul> 
   <li>
-    <a href="https://afdian.com/p/0164034c016c11ebafcb52540025c377">跳转至 pcl下载页</a>
+    <a href="https://wwnu.lanzouu.com/itDaF2lf9r5a">跳转至 PC-pcl下载页</a>
+    <span>获取密码:1pkg</span>
+    <a href="https://wwnu.lanzouu.com/ikTPr30b7m5e">跳转至 Java8</a>
+    <span>获取密码:8j4v</span>
+    <a href="https://wwnu.lanzouu.com/iykRQ30b7zbi">跳转至 PE-pcl(限安卓)下载页</a>
+    <span>获取密码:4bbk</span>
+    <a href="https://wwnu.lanzouu.com/iHA9A30b7lra">跳转至 Java17</a>
+    <span>获取密码:无</span>
   </li>
 </ul>
