--- a/index.html
+++ b/index.html
@@ -45,4 +45,4 @@ awawawawawawa</span>
         <a href="https://jiangdl2333.github.io/SubjectMC.html">跳转至 MC专题</a>
     </li>
 <ul>
-<span class="thank">Thanks to:Yzl Gys Dhy Qjq Cxm </span>
+<span class="thank">Thanks to:Yzl Gys Dhy Qjq Cxm Qk </span>
