--- a/SubjectMC.html
+++ b/SubjectMC.html
@@ -1,14 +1,17 @@
-<title>mc专题</title>
+<title>MC专题</title>
 <h3>专题网站</h3>
-<span>20250622v1-sever1.15.2新服： frp-mix.com:12483 </span>
+<span>20250622v1-sever1.15.2新服： frp-mix.com:12483 或 frp-fan.com:18171 </span>
 <ul> 
   <li>
     <a href="https://wwnu.lanzouu.com/itDaF2lf9r5a">跳转至 PC-pcl下载页</a>
     <span>获取密码:1pkg</span>
+    <br>
     <a href="https://wwnu.lanzouu.com/ikTPr30b7m5e">跳转至 Java8</a>
     <span>获取密码:8j4v</span>
+    <br>
     <a href="https://wwnu.lanzouu.com/iykRQ30b7zbi">跳转至 PE-pcl(限安卓)下载页</a>
     <span>获取密码:4bbk</span>
+    <br>
     <a href="https://wwnu.lanzouu.com/iHA9A30b7lra">跳转至 Java17</a>
     <span>获取密码:无</span>
   </li>
