--- a/SubjectMC.html
+++ b/SubjectMC.html
@@ -1,7 +1,7 @@
 <title>MC专题</title>
 <h3>专题网站</h3>
-<span>20250622v1-sever1.15.2新服： frp-mix.com:12483 或 frp-fan.com:18171 </span>
-<ul> 
+<span>20250930v1-sever1.15.2新服： frp-fan.com:47615 </span>
+<ul> 1
   <li>
     <a href="https://wwnu.lanzouu.com/itDaF2lf9r5a">跳转至 PC-pcl下载页</a>
     <span>获取密码:1pkg</span>
